# IE105.Q22

./: README.md
backend/: .gitignore  pyproject.toml
backend/app/: main.py
backend/app/dataset_column/: router.py  service.py
backend/app/dataset_eda/: dependencies.py  router.py  schemas.py  service.py
backend/app/dependencies/: dataset_action.py  math_ops.py
backend/app/feature_encoding/: router.py  schemas.py  service.py
backend/app/feature_engineering/: router.py  schemas.py
backend/app/feature_engineering/services/: exp_eval.py  sp_ops.py  test_exp_eval.py
backend/app/feature_imbalance/: router.py  schemas.py
backend/app/feature_selection/: routers.py  schemas.py
backend/app/feature_transformation/: router.py  schemas.py
backend/app/routers/datasets/: dependencies.py  explore.py
backend/app/routers/datasets/test/: test_dependencies.py  test_explore.py
backend/app/test/dataset-eda/: test_router.py
backend/app/test/feature_engineering/services/: test_exp_eval.py
